umstellung auf require.js

--- a/src/main/resources/Ts3.ini
+++ b/src/main/resources/Ts3.ini
@@ -1,6 +1,6 @@
 [general]
-ip=ip.or.domain.com
-port=9987
+ip=worfox.net
+port=5255
 queryPort=10011
 
 ; DEFAULT or UNLIMITED, query IP has to be whitelisted to use UNLIMITED
@@ -9,12 +9,9 @@ botName=Der Registrierer
 
 ; The IDs of the Groups to Check
 groupIds=10
-groupIds=11
-groupIds=12
-groupIds=13
 
 ; Optional, TS3->Extras->ServerQuery Login
-queryUsername=username
-queryPassword=password
+queryUsername=WFX
+queryPassword=ZmbMPNfD
 
 
