--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                             <resources>
                                 <resource>
                                     <directory>src/main/resources/static</directory>
-                                    <filtering>true</filtering>
+                                    <!-- <filtering>true</filtering> -->
                                 </resource>
                             </resources>
                         </configuration>
@@ -102,19 +102,9 @@
             <version>[1.0.0,2.0.0)</version>
         </dependency>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.4.191</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.jpa</artifactId>
-            <version>2.6.2</version>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.2.2</version>
         </dependency>
         <dependency>
             <groupId>com.sparkjava</groupId>
